meta tags added

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
+    <meta name="keywords" content="CSS, Grid, LandingPage, Frontendmentor" />
+    <meta name="description" content="Four card feature section" />
+    <meta name="author" content="Sergio Cruz" />
 
     <link
       rel="icon"
