target blank added

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#4C4E61" />
     <meta name="keywords" content="CSS, Grid, LandingPage, Frontendmentor" />
     <meta name="description" content="Four card feature section" />
     <meta name="author" content="Sergio Cruz" />
@@ -102,7 +103,13 @@
           href="https://www.frontendmentor.io?ref=challenge"
           target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a class="attribution__name" href="#">Sergio Cruz</a>.
+        >. Coded by
+        <a
+          class="attribution__name"
+          href="https://github.com/SergioCzP"
+          target="_blank"
+          >Sergio Cruz</a
+        >.
       </p>
     </footer>
   </body>
